deploy: 625b6662ecc8efa6c3e7d0a0a6b7403f7cd4a270

--- a/pictures/path.html
+++ b/pictures/path.html
@@ -85,7 +85,7 @@
     .</span><span class="identifier">path</span></code></pre>
             <p>Drawing this path creates the output below.</p>
             <div class="default-image-block">
-              <img src="basic-path.png">
+              <img src="basic-path.png" alt="A path with straight lines and bezier curves" title="A path with straight lines and bezier curves">
             </div>
             <p>You probably noticed this is a <code>ClosedPath</code>, which suggests there is also an <code>OpenPath</code>. This is correct. The difference is how the path ends. If a <code>ClosedPath</code> doesn&#39;t end at the point it started (which is the origin), it will have a straight line inserted joining the end to the start. An <code>OpenPath</code> will not.</p>
             <p>Here&#39;s an example showing the difference. We create a curve, drawn as an open and a closed path. Notice how the open path is just a curve, while the closed path has an extra line added joining the start and end points.</p>
@@ -97,7 +97,7 @@
 
 </span><span class="keyword">val</span><span> </span><span class="identifier">curves</span><span> = </span><span class="identifier">open</span><span>.</span><span class="identifier">beside</span><span>(</span><span class="identifier">closed</span><span>)</span></code></pre>
             <div class="default-image-block">
-              <img src="open-closed-paths.png">
+              <img src="open-closed-paths.png" alt="A curve drawn as an open and a closed path" title="A curve drawn as an open and a closed path">
             </div>
             
             <h2 id="implementation" class="section">Implementation</h2>
@@ -131,7 +131,7 @@
 
 </span><span class="keyword">val</span><span> </span><span class="identifier">curve</span><span> = </span><span class="type-name">Picture</span><span>.</span><span class="identifier">interpolatingSpline</span><span>(</span><span class="identifier">points</span><span>.</span><span class="identifier">toList</span><span>)</span></code></pre>
             <div class="default-image-block">
-              <img src="curve.png">
+              <img src="curve.png" alt="A curve that intersects a sequence of points" title="A curve that intersects a sequence of points">
             </div>
             <p class="nextPage"><a href="layout.html">Layout→</a></p>
         </main>
