--- a/pictures/style.html
+++ b/pictures/style.html
@@ -84,7 +84,7 @@
         .</span><span class="identifier">fillColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">lavender</span><span>)
     )</span></code></pre>
             <div class="default-image-block">
-              <img src="basic-style.png">
+              <img src="basic-style.png" alt="A circle with no style and a circle with a purple stroke and lavender fill" title="A circle with no style and a circle with a purple stroke and lavender fill">
             </div>
             <p>The available settings for the stroke are:</p>
             <ul>
@@ -114,7 +114,7 @@
         .</span><span class="identifier">strokeDash</span><span>(</span><span class="type-name">Array</span><span>(</span><span class="number-literal">12.0</span><span>, </span><span class="number-literal">9.0</span><span>))
     )</span></code></pre>
             <div class="default-image-block">
-              <img src="stroke-style.png">
+              <img src="stroke-style.png" alt="Two stars with different stroke styles" title="Two stars with different stroke styles">
             </div>
             <p>The fill can either be one of:</p>
             <ul>
@@ -145,7 +145,7 @@
         .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">5.0</span><span>)
     )</span></code></pre>
             <div class="default-image-block">
-              <img src="fill-style.png">
+              <img src="fill-style.png" alt="A square with a linear gradient fill and a circle with a radial gradient fill" title="A square with a linear gradient fill and a circle with a radial gradient fill">
             </div>
             
             <h2 id="implementation" class="section">Implementation</h2>
