--- a/pictures/shape.html
+++ b/pictures/shape.html
@@ -76,7 +76,7 @@
     .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">5.0</span><span>)</span></code></pre>
             <p>This program gives the output below.</p>
             <div class="default-image-block">
-              <img src="basic-shapes.png" alt="A circle with square and triangle" title="A circle with square and triangle">
+              <img src="basic-shapes.png" alt="A circle on a square on a triangle" title="A circle on a square on a triangle">
             </div>
             <p>Here is a short description of all the methods provided by <code>Shape</code>.</p>
             <ul>
