deploy: 1e08987ba314ba6bf24b47088eb94502c408e42d

--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
           <li class="level2 nav-leaf"><a href="algebra/algebras.html">Available Algebras</a></li>
           <li class="level1 nav-leaf"><a href="effect/">Effects</a></li>
           <li class="level1 nav-leaf"><a href="svg/">Doodle SVG</a></li>
-          <li class="level1 nav-leaf"><a href="development/">Developing Doodle</a></li>
+          <li class="level1 nav-leaf"><a href="canvas/">Doodle Canvas</a></li>
+          <li class="level1 nav-node"><a href="development/">Developing Doodle</a></li>
+          <li class="level2 nav-leaf"><a href="development/backend.html">Implementing a Backend</a></li>
         </ul>
     </nav>
 
     <div id="content">
         <main class="content">
             <h1 id="doodle" class="title">Doodle</h1>
-            <p>Doodle is a Scala library for 2D graphics, animation, data visualization, and creative coding. It runs in both the JVM, rendering via <a href="https://en.wikipedia.org/wiki/Java_2D">Java2D</a>, and the web browser using <a href="https://en.wikipedia.org/wiki/SVG">SVG</a>.</p>
+            <p>Doodle is a Scala library for 2D graphics, animation, data visualization, and creative coding. It runs in both the JVM, rendering via <a href="https://en.wikipedia.org/wiki/Java_2D">Java2D</a>, and the web browser using <a href="https://en.wikipedia.org/wiki/SVG">SVG</a> or the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/canvas">Canvas</a>.</p>
             
             <h2 id="getting-started" class="section">Getting Started</h2>
             <p>To use Doodle, add the following to your <code>build.sbt</code></p>
