--- a/pictures/size.html
+++ b/pictures/size.html
@@ -53,7 +53,9 @@
           <li class="level2 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
           <li class="level1 nav-leaf"><a href="../effect/">Effects</a></li>
           <li class="level1 nav-leaf"><a href="../svg/">Doodle SVG</a></li>
-          <li class="level1 nav-leaf"><a href="../development/">Developing Doodle</a></li>
+          <li class="level1 nav-leaf"><a href="../canvas/">Doodle Canvas</a></li>
+          <li class="level1 nav-node"><a href="../development/">Developing Doodle</a></li>
+          <li class="level2 nav-leaf"><a href="../development/backend.html">Implementing a Backend</a></li>
         </ul>
     </nav>
 
@@ -88,10 +90,10 @@
       .</span><span class="identifier">strokeColor</span><span>(</span><span class="type-name">Color</span><span>.</span><span class="identifier">hotpink</span><span>)
       .</span><span class="identifier">strokeWidth</span><span>(</span><span class="number-literal">3.0</span><span>)
   )
-</span><span class="comment">// boundingBox: Picture[FromGifBase64 &amp; Basic &amp; Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromJpgBase64, Unit] = doodle.algebra.Picture$$anon$1@793f2325
+</span><span class="comment">// boundingBox: Picture[FromGifBase64 &amp; Basic &amp; Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromJpgBase64, Unit] = doodle.algebra.Picture$$anon$1@1d11f7a9
 </span><span>  
 </span><span class="keyword">val</span><span> </span><span class="identifier">picture</span><span> = </span><span class="identifier">circle</span><span>.</span><span class="identifier">on</span><span>(</span><span class="identifier">boundingBox</span><span>)
-</span><span class="comment">// picture: Picture[Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromGifBase64 &amp; Basic &amp; FromJpgBase64, Unit] = doodle.syntax.LayoutSyntax$$anon$1@5ed580d8</span></code></pre>
+</span><span class="comment">// picture: Picture[Bitmap &amp; FromBufferedImage &amp; FromPngBase64 &amp; FromGifBase64 &amp; Basic &amp; FromJpgBase64, Unit] = doodle.syntax.LayoutSyntax$$anon$1@4a970466</span></code></pre>
             <p>This produces the picture shown below.</p>
             <div class="default-image-block">
               <img src="bounding-box.png" alt="A circle with a bounding box" title="A circle with a bounding box">
