--- a/development/index.html
+++ b/development/index.html
@@ -20,9 +20,9 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="../svg/">←</a></p>
+    <nav id="topbar"><p><a href="../canvas/">←</a></p>
 <p><a href="../../">Doodle</a></p>
-<p></p></nav>
+<p><a href="backend.html">→</a></p></nav>
     <nav id="sidebar">
         <ul class="nav-list">
           <li class="level1 nav-leaf"><a href="../">Doodle</a></li>
@@ -53,7 +53,9 @@
           <li class="level2 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
           <li class="level1 nav-leaf"><a href="../effect/">Effects</a></li>
           <li class="level1 nav-leaf"><a href="../svg/">Doodle SVG</a></li>
-          <li class="level1 active nav-leaf"><a href="#">Developing Doodle</a></li>
+          <li class="level1 nav-leaf"><a href="../canvas/">Doodle Canvas</a></li>
+          <li class="level1 active nav-node"><a href="#">Developing Doodle</a></li>
+          <li class="level2 nav-leaf"><a href="backend.html">Implementing a Backend</a></li>
         </ul>
     </nav>
 
@@ -109,7 +111,7 @@
         </span><span class="identifier">algebra</span><span>.</span><span class="identifier">on</span><span>(</span><span class="identifier">picture</span><span>(</span><span class="identifier">algebra</span><span>), </span><span class="identifier">that</span><span>(</span><span class="identifier">algebra</span><span>))
     }
 }</span></code></pre>
-            
+            <p class="nextPage"><a href="backend.html">Implementing a Backend→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
