--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
           <li class="level2 nav-leaf"><a href="algebra/algebras.html">Available Algebras</a></li>
           <li class="level1 nav-leaf"><a href="effect/">Effects</a></li>
           <li class="level1 nav-leaf"><a href="svg/">Doodle SVG</a></li>
-          <li class="level1 nav-leaf"><a href="canvas/">Doodle Canvas</a></li>
+          <li class="level1 nav-node"><a href="canvas/">Doodle Canvas</a></li>
+          <li class="level2 nav-leaf"><a href="canvas/examples.html">Canvas Examples</a></li>
           <li class="level1 nav-node"><a href="development/">Developing Doodle</a></li>
           <li class="level2 nav-leaf"><a href="development/backend.html">Implementing a Backend</a></li>
         </ul>
