--- a/development/index.html
+++ b/development/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="../canvas/">←</a></p>
+    <nav id="topbar"><p><a href="../canvas/examples.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p><a href="backend.html">→</a></p></nav>
     <nav id="sidebar">
@@ -53,7 +53,8 @@
           <li class="level2 nav-leaf"><a href="../algebra/algebras.html">Available Algebras</a></li>
           <li class="level1 nav-leaf"><a href="../effect/">Effects</a></li>
           <li class="level1 nav-leaf"><a href="../svg/">Doodle SVG</a></li>
-          <li class="level1 nav-leaf"><a href="../canvas/">Doodle Canvas</a></li>
+          <li class="level1 nav-node"><a href="../canvas/">Doodle Canvas</a></li>
+          <li class="level2 nav-leaf"><a href="../canvas/examples.html">Canvas Examples</a></li>
           <li class="level1 active nav-node"><a href="#">Developing Doodle</a></li>
           <li class="level2 nav-leaf"><a href="backend.html">Implementing a Backend</a></li>
         </ul>
