deploy: 5b66bb797d0f1349d5532e642b5847e46bfb4b66

--- a/canvas/examples.html
+++ b/canvas/examples.html
@@ -70,6 +70,11 @@
             <p>Examples from the <a href="../pictures/layout.html">Layout</a> documentation.</p>
             <div id="layout-examples"></div>
             <script>CanvasLayoutExamples.draw("layout-examples")</script>
+            
+            <h2 id="style" class="section">Style</h2>
+            <p>Examples from the <a href="../pictures/style.html">Style</a> documentation.</p>
+            <div id="style-examples"></div>
+            <script>CanvasStyleExamples.draw("style-examples")</script>
             <p class="nextPage"><a href="../development/">Developing Doodle→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
