deploy: 64ee23a78605fabc13bcc0c55f8fb5f937ea8b30

--- a/svg/index.html
+++ b/svg/index.html
@@ -104,7 +104,7 @@
             
             <h3 id="parametric-spiral" class="section">Parametric Spiral</h3>
             <div id="parametric-spiral"></div>
-            <script>ParametricSpiral.draw("parametric-spiral")</script>
+            <script>SvgParametricSpiral.draw("parametric-spiral")</script>
             <p class="nextPage"><a href="../canvas/">Doodle Canvas→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
