deploy: c2c97e70cfcd7ff249a630f43a208fddf5e1870a

--- a/canvas/index.html
+++ b/canvas/index.html
@@ -54,7 +54,9 @@
           <li class="level1 nav-leaf"><a href="../effect/">Effects</a></li>
           <li class="level1 nav-leaf"><a href="../svg/">Doodle SVG</a></li>
           <li class="level1 active nav-node"><a href="#">Doodle Canvas</a></li>
-          <li class="level2 nav-leaf"><a href="examples.html">Canvas Examples</a></li>
+          <li class="level2 nav-leaf"><a href="examples.html">Miscellaneous Examples</a></li>
+          <li class="level2 nav-leaf"><a href="layout-examples.html">Layout Examples</a></li>
+          <li class="level2 nav-leaf"><a href="style-examples.html">Style Examples</a></li>
           <li class="level1 nav-node"><a href="../development/">Developing Doodle</a></li>
           <li class="level2 nav-leaf"><a href="../development/backend.html">Implementing a Backend</a></li>
         </ul>
@@ -91,7 +93,7 @@
             <h3 id="parametric-spiral" class="section">Parametric Spiral</h3>
             <div id="parametric-spiral"></div>
             <script>CanvasParametricSpiral.draw("parametric-spiral")</script>
-            <p class="nextPage"><a href="examples.html">Canvas Examples→</a></p>
+            <p class="nextPage"><a href="examples.html">Miscellaneous Examples→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
     </div>
