--- a/pictures/style.html
+++ b/pictures/style.html
@@ -54,7 +54,9 @@
           <li class="level1 nav-leaf"><a href="../effect/">Effects</a></li>
           <li class="level1 nav-leaf"><a href="../svg/">Doodle SVG</a></li>
           <li class="level1 nav-node"><a href="../canvas/">Doodle Canvas</a></li>
-          <li class="level2 nav-leaf"><a href="../canvas/examples.html">Canvas Examples</a></li>
+          <li class="level2 nav-leaf"><a href="../canvas/examples.html">Miscellaneous Examples</a></li>
+          <li class="level2 nav-leaf"><a href="../canvas/layout-examples.html">Layout Examples</a></li>
+          <li class="level2 nav-leaf"><a href="../canvas/style-examples.html">Style Examples</a></li>
           <li class="level1 nav-node"><a href="../development/">Developing Doodle</a></li>
           <li class="level2 nav-leaf"><a href="../development/backend.html">Implementing a Backend</a></li>
         </ul>
