--- a/canvas/examples.html
+++ b/canvas/examples.html
@@ -74,6 +74,11 @@
             <h2 id="parametric-spiral" class="section">Parametric Spiral</h2>
             <div id="parametric-spiral"></div>
             <script>CanvasParametricSpiral.draw("parametric-spiral")</script>
+            
+            <h2 id="frame-background" class="section">Frame Background</h2>
+            <p>This example merely checks that the frame background is correctly interpreted. There should be a dark blue square below.</p>
+            <div id="frame-background"></div>
+            <script>CanvasFrameBackground.draw("frame-background")</script>
             <p class="nextPage"><a href="layout-examples.html">Layout Examples→</a></p>
         </main>
         <footer>Creative Scala is copyright Noel Welsh</footer>
