deploy: 87b804ca701632e4bb8c8e9cb6edbb6f62b88716

--- a/canvas/examples.html
+++ b/canvas/examples.html
@@ -76,7 +76,7 @@
             <script>CanvasParametricSpiral.draw("parametric-spiral")</script>
             
             <h2 id="frame-background" class="section">Frame Background</h2>
-            <p>This example merely checks that the frame background is correctly interpreted. There should be a dark blue square below.</p>
+            <p>This example merely checks that the frame background is correctly interpreted. There should be a dark blue square.</p>
             <div id="frame-background"></div>
             <script>CanvasFrameBackground.draw("frame-background")</script>
             <p class="nextPage"><a href="layout-examples.html">Layout Examples→</a></p>
