--- a/development/backend.html
+++ b/development/backend.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="index.html">←</a></p>
+    <nav id="topbar"><p><a href="syntax.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p></p></nav>
     <nav id="sidebar">
@@ -58,6 +58,8 @@
           <li class="level2 nav-leaf"><a href="../canvas/layout-examples.html">Layout Examples</a></li>
           <li class="level2 nav-leaf"><a href="../canvas/style-examples.html">Style Examples</a></li>
           <li class="level1 nav-node"><a href="index.html">Developing Doodle</a></li>
+          <li class="level2 nav-leaf"><a href="process.html">Development Process</a></li>
+          <li class="level2 nav-leaf"><a href="syntax.html">Implementing Syntax</a></li>
           <li class="level2 active nav-leaf"><a href="#">Implementing a Backend</a></li>
         </ul>
     </nav>
