--- a/interact/animation.html
+++ b/interact/animation.html
@@ -58,6 +58,8 @@
           <li class="level2 nav-leaf"><a href="../canvas/layout-examples.html">Layout Examples</a></li>
           <li class="level2 nav-leaf"><a href="../canvas/style-examples.html">Style Examples</a></li>
           <li class="level1 nav-node"><a href="../development/">Developing Doodle</a></li>
+          <li class="level2 nav-leaf"><a href="../development/process.html">Development Process</a></li>
+          <li class="level2 nav-leaf"><a href="../development/syntax.html">Implementing Syntax</a></li>
           <li class="level2 nav-leaf"><a href="../development/backend.html">Implementing a Backend</a></li>
         </ul>
     </nav>
