deploy: 907bce38afaf9aa251ceeb4f9e4941874cea9a0c

--- a/pictures/drawing.html
+++ b/pictures/drawing.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="size.html">←</a></p>
+    <nav id="topbar"><p><a href="text.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p><a href="writing.html">→</a></p></nav>
     <nav id="sidebar">
@@ -42,6 +42,7 @@
           <li class="level2 nav-leaf"><a href="style.html">Style</a></li>
           <li class="level2 nav-leaf"><a href="transform.html">Transforms</a></li>
           <li class="level2 nav-leaf"><a href="size.html">Size</a></li>
+          <li class="level2 nav-leaf"><a href="text.html">Text</a></li>
           <li class="level2 active nav-leaf"><a href="#">Drawing to the Screen</a></li>
           <li class="level2 nav-leaf"><a href="writing.html">Writing to a File</a></li>
           <li class="level1 nav-leaf"><a href="../core/">Core</a></li>
