--- a/pictures/style.html
+++ b/pictures/style.html
@@ -42,6 +42,7 @@
           <li class="level2 active nav-leaf"><a href="#">Style</a></li>
           <li class="level2 nav-leaf"><a href="transform.html">Transforms</a></li>
           <li class="level2 nav-leaf"><a href="size.html">Size</a></li>
+          <li class="level2 nav-leaf"><a href="text.html">Text</a></li>
           <li class="level2 nav-leaf"><a href="drawing.html">Drawing to the Screen</a></li>
           <li class="level2 nav-leaf"><a href="writing.html">Writing to a File</a></li>
           <li class="level1 nav-leaf"><a href="../core/">Core</a></li>
