deploy: c0efafd9086ffdbdcd116d80e0caf9c8d244a3c0

--- a/development/process.html
+++ b/development/process.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav id="topbar"><p><a href="index.html">←</a></p>
+    <nav id="topbar"><p><a href="design.html">←</a></p>
 <p><a href="../../">Doodle</a></p>
 <p><a href="syntax.html">→</a></p></nav>
     <nav id="sidebar">
@@ -59,6 +59,7 @@
           <li class="level2 nav-leaf"><a href="../canvas/layout-examples.html">Layout Examples</a></li>
           <li class="level2 nav-leaf"><a href="../canvas/style-examples.html">Style Examples</a></li>
           <li class="level1 nav-node"><a href="index.html">Developing Doodle</a></li>
+          <li class="level2 nav-leaf"><a href="design.html">Design</a></li>
           <li class="level2 active nav-leaf"><a href="#">Development Process</a></li>
           <li class="level2 nav-leaf"><a href="syntax.html">Implementing Syntax</a></li>
           <li class="level2 nav-leaf"><a href="backend.html">Implementing a Backend</a></li>
