--- a/development/syntax.html
+++ b/development/syntax.html
@@ -59,6 +59,7 @@
           <li class="level2 nav-leaf"><a href="../canvas/layout-examples.html">Layout Examples</a></li>
           <li class="level2 nav-leaf"><a href="../canvas/style-examples.html">Style Examples</a></li>
           <li class="level1 nav-node"><a href="index.html">Developing Doodle</a></li>
+          <li class="level2 nav-leaf"><a href="design.html">Design</a></li>
           <li class="level2 nav-leaf"><a href="process.html">Development Process</a></li>
           <li class="level2 active nav-leaf"><a href="#">Implementing Syntax</a></li>
           <li class="level2 nav-leaf"><a href="backend.html">Implementing a Backend</a></li>
