--- a/canvas/style-examples.html
+++ b/canvas/style-examples.html
@@ -59,6 +59,7 @@
           <li class="level2 nav-leaf"><a href="layout-examples.html">Layout Examples</a></li>
           <li class="level2 active nav-leaf"><a href="#">Style Examples</a></li>
           <li class="level1 nav-node"><a href="../development/">Developing Doodle</a></li>
+          <li class="level2 nav-leaf"><a href="../development/design.html">Design</a></li>
           <li class="level2 nav-leaf"><a href="../development/process.html">Development Process</a></li>
           <li class="level2 nav-leaf"><a href="../development/syntax.html">Implementing Syntax</a></li>
           <li class="level2 nav-leaf"><a href="../development/backend.html">Implementing a Backend</a></li>
