deploy: 64798c62e63b69675ec2721f5e0217c30117ac8f

--- a/development/design.html
+++ b/development/design.html
@@ -78,10 +78,11 @@
             For example, we can just <code>draw</code> a <code>Picture</code> without providing a <code>Canvas</code> or <code>Frame</code>, or having to deal with <code>IO</code>.
             The most convenient operation is usually presented as the default. 
             So we expect people will want to use <code>draw</code> more than <code>drawWithFrame</code> or <code>drawToIO</code>, and hence it has the shortest name and is introduced first in documentation.</p>
-            <p>Conveniences that run <code>IO</code> should be implemented as syntax.
-            Other conveniences should generally be implemented as methods on algebras,
-            implemented in terms of more basic methods on the algebra.
-            (Note that the current system is very mixed on whether this is followed or not.)</p>
+            <p>Conveniences should be implemented as syntax.
+            Try to keep algebras to the minimal set of most basic operations.
+            Note that the current system doesn&#39;t follow this advice very closely.
+            Until we figured how to make the current architecture it was expected that people would frequently interact directly with algebras,
+            so they tend to contain more methods than is strictly necessary.</p>
             <p>The default operations, provided as syntax, generally do not expose <code>IO</code>. 
             Altneratives that do expose <code>IO</code> are suffixed <code>toIO</code>.
             So, for example, <code>draw</code> is the default operation to render a <code>Picture</code> and does not expose an <code>IO</code>.
